--- a/Bing Downloader/Properties/Resources.resx
+++ b/Bing Downloader/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="icons8_bing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icons8-bing.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="img" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\thumbs.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
